--- a/business-card/index.html
+++ b/business-card/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="card">
-            <img class="avatar" src="images/visho.png">
+            <img class="avatar" src="images/visho.jpeg">
             <div >
                 <h3>Visho Malla Oli</h3>
                 <p>CompSci & Math Student</p>
